--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "vant": "^1.6.7",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
