--- a/service/package.json
+++ b/service/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "bcrypt": "^3.0.5",
     "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.6",
     "mongoose": "^5.4.19"
   }
 }
